Get rid of the Module Constructor